# saho

./: CMakeLists.txt  LicenseTemplate.txt  README.md  style-qtcreator.xml
common/: CMakeLists.txt  logger.cpp  logger.h  watchableprocess.cpp  watchableprocess.h
dipc/: CMakeLists.txt  main.cpp  process.cpp  process.h  watchableprocess.cpp  watchableprocess.h
docs/: bladerunner_overview.vsdx
examples/: CMakeLists.txt  common.cpp  watchdog-example-1.cpp
utils/: CMakeLists.txt  clientsocket.cpp  clientsocket.h  serversocket.cpp  serversocket.h  socket.cpp  socket.h  socketexception.h
watchdog/: CMakeLists.txt  main.cpp  processfactory.cpp  processfactory.h  watchdogapp.cpp  watchdogapp.h
